--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
           </div>
           <div class="col-md-6 background">
 
-            
+            <!-- Income input -->
+              <div
+                class="d-flex flex-column justify-content-center align-content-center mb-5"
+              >
+                <h4 class="fw-bold text-center mb-3">Income</h4>
+                <div
+                  class="row d-flex justify-content-between align-items-center"
+                >
+                  <div class="col-md-2">
+                    <h5 class="me-4 fw-bold">Income:</h5>
+                  </div>
+                  <div class="col-md-8">
+                    <input
+                      type="text"
+                      id="input-income"
+                      class="form-control w-80"
+                    />
+                  </div>
+                </div>
+              </div>
               </div>
             </d>
           </div>
