--- a/index.html
+++ b/index.html
@@ -49,6 +49,81 @@
                   </div>
                 </div>
               </div>
+              <!-- Spending input  -->
+              <div class="d-flex flex-column justify-content-center mb-3">
+                <h4 class="fw-bold text-center mb-3">Spending:</h4>
+                <div
+                  class="row d-flex justify-content-between align-items-center"
+                >
+                  <div class="col-md-2">
+                    <h5 class="me-4 fw-bold">Food:</h5>
+                  </div>
+                  <div class="col-md-8">
+                    <input
+                      type="text"
+                      id="input-food"
+                      class="form-control w-80"
+                    />
+                  </div>
+                </div>
+              </div>
+              <!-- Rent input  -->
+              <div class="d-flex flex-column justify-content-center mb-3">
+                <div
+                  class="row d-flex justify-content-between align-items-center"
+                >
+                  <div class="col-md-2">
+                    <h5 class="me-4 fw-bold">Rent:</h5>
+                  </div>
+                  <div class="col-md-8">
+                    <input
+                      type="text"
+                      id="input-rent"
+                      class="form-control w-80"
+                    />
+                  </div>
+                </div>
+              </div>
+              <!-- clothes input  -->
+              <div class="d-flex flex-column justify-content-center mb-3">
+                <div
+                  class="row d-flex justify-content-between align-items-center"
+                >
+                  <div class="col-md-2">
+                    <h5 class="me-4 fw-bold">Clothes:</h5>
+                  </div>
+                  <div class="col-md-8">
+                    <input
+                      type="text"
+                      id="input-clothe"
+                      class="form-control w-80"
+                    />
+                  </div>
+                </div>
+              </div>
+              <!-- Calculatation button -->
+              <div class="d-flex flex-column justify-content-center my-4">
+                <div
+                  class="row d-flex justify-content-between align-items-center"
+                >
+                  <div class="col-md-2"></div>
+                  <div class="col-md-8">
+                    <button
+                      id="calculation-btn"
+                      class="btn btn-color fw-bold w-80 "
+                    >
+                      Calculate
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <h5 class="text-center mt-md-2 fw-bold">
+                Total Spending $ <span id="total-spendings" ></span>
+              </h5>
+              <h5 class="text-center mt-md-3 fw-bold">
+                New Balance $ <span id="new-balance"></span>
+              </h5>
+
               </div>
             </d>
           </div>
