--- a/index.html
+++ b/index.html
@@ -123,7 +123,23 @@
               <h5 class="text-center mt-md-3 fw-bold">
                 New Balance $ <span id="new-balance"></span>
               </h5>
-
+          
+               <!-- Save input -->
+              <div class="row">
+                <div class="d-flex justify-content-around w-100 mx-auto mt-5">
+                  <h5 class="fw-bold">Save</h5>
+                  <input type="number" id="parcent" class="form-control w-25" />
+                  <h5 class="fw-bolder">%</h5>
+                  <button id="savings-btn" class="btn btn-color fw-bold w-25">Save</button>
+                </div>
+                <h5 class="text-center mt-3 fw-bold">
+                  Saving amount $ <span id="total-savings" ></span>
+                </h5>
+                <h5 class="text-center mt-1 fw-bold">
+                  Ultimate Ammount $
+                  <span id="ultimate-ammount" ></span>
+                </h5>
+              </div>
               </div>
             </d>
           </div>
