--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-md-6 background">
 
-            <!-- Income input -->
+             <!-- Income input -->
               <div
                 class="d-flex flex-column justify-content-center align-content-center mb-5"
               >
@@ -123,8 +123,8 @@
               <h5 class="text-center mt-md-3 fw-bold">
                 New Balance $ <span id="new-balance"></span>
               </h5>
-          
-               <!-- Save input -->
+
+              <!-- Save input -->
               <div class="row">
                 <div class="d-flex justify-content-around w-100 mx-auto mt-5">
                   <h5 class="fw-bold">Save</h5>
@@ -140,9 +140,9 @@
                   <span id="ultimate-ammount" ></span>
                 </h5>
               </div>
-              </div>
             </d>
           </div>
+    </section>
     </section>
     <script src="money.js"></script>
     <script
