--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
           </div>
     </section>
     </section>
+    <!--scripts file-->
     <script src="money.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
