--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </div>
               <!-- Spending input  -->
               <div class="d-flex flex-column justify-content-center mb-3">
-                <h4 class="fw-bold text-center mb-3">Spending:</h4>
+                <h4 class="fw-bold text-center mb-3">Expenses:</h4>
                 <div
                   class="row d-flex justify-content-between align-items-center"
                 >
@@ -118,7 +118,7 @@
                 </div>
               </div>
               <h5 class="text-center mt-md-2 fw-bold">
-                Total Spending $ <span id="total-spendings" ></span>
+                Total Expenses $ <span id="total-expenses" ></span>
               </h5>
               <h5 class="text-center mt-md-3 fw-bold">
                 New Balance $ <span id="new-balance"></span>
